added till footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodeCrafted</title>
+    <title>TrendWave</title>
+    <link rel="shortcut icon" href="/src/assets/logo.png">
   </head>
   <body>
     <div id="root"></div>
